initial version of modal for deleting transaction

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,6 +4,10 @@
   "recentTransactions": "Recent transactions",
   "newTransaction": "New Transaction",
 
+  "details": "Details",
+  "edit": "Edit",
+  "delete": "Delete",
+
   "languageEnglish": "English",
   "languagePolish": "Polish",
 
