--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -4,6 +4,10 @@
   "recentTransactions": "Ostatnie transakcje",
   "newTransaction": "Nowa transakcja",
 
+  "details": "Szczegóły",
+  "edit": "Edytuj",
+  "delete": "Usuń",
+
   "languageEnglish": "Angielski",
   "languagePolish": "Polski",
 
