extract component with transaction details from delete modal

--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -10,6 +10,8 @@
   "details": "Szczegóły",
   "edit": "Edytuj",
   "delete": "Usuń",
+  
+  "no": "Nie",
 
   "languageEnglish": "Angielski",
   "languagePolish": "Polski",
