add initial version of edit modal with zod and Form from shadcn

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,6 +7,8 @@
   "deleteTransaction": "Delete transaction",
   "deleteTransactionQuestion": "Are you sure you want to delete transaction?",
 
+  "descriptionRequired": "Description is required",
+
   "details": "Details",
   "edit": "Edit",
   "delete": "Delete",
