--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -7,6 +7,8 @@
   "deleteTransaction": "Usuń transakcję",
   "deleteTransactionQuestion": "Czy na pewno chcesz usunąć transakcję?",
 
+  "descriptionRequired": "Opis jest wymagany",
+
   "details": "Szczegóły",
   "edit": "Edytuj",
   "delete": "Usuń",
