initial ui for login page * think about adding the same top bar for login and after login

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,9 @@
 {
+  "login": "Login",
+  "email": "Email address",
+  "password": "Password",
+  "logIn": "Log in",
+  
   "title": "Finance Tracker",
   "transactions": "Transactions",
   "recentTransactions": "Recent transactions",
