move chosing language from visible button to user context menu

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -27,6 +27,7 @@
   "save": "Save",
   "saving": "Saving...",
 
+  "language": "Language",
   "languageEnglish": "English",
   "languagePolish": "Polish",
 
