--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -27,6 +27,7 @@
   "save": "Zapisz",
   "saving": "Zapisywanie...",
 
+  "language": "Język",
   "languageEnglish": "Angielski",
   "languagePolish": "Polski",
 
