implement pagination panel * TODO clean `transactions-pagination` file

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -71,7 +71,8 @@
     "payment": "Payment",
     "credit": "Credit",
     "cashDepositMachine": "Cash Deposit Machine",
-    "card": "Card"
+    "card": "Card",
+    "incomingTransfer": "Incoming Transfer"
   },
 
   "currency_options": {
