add support for custom bar legend * add missing translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -50,6 +50,10 @@
   "income": "Income",
   "balance": "Balance",
   "allTime": "Total",
+  "tableVisualisation": "Table",
+  "barChartVisualisation": "Bar chart",
+  "balancePositive": "Positive balance",
+  "balanceNegative": "Negative balance",
 
   "descriptionRequired": "Description is required",
 
