update parser code to get from spreadsheets transactions from 2025 * TODO not all were stored in spreadsheet and some will be added manually * TODO add some functionality to save all transactions to csv by UI (just in case to be able to revert them) * update available accounts * add some logic to serialize manually ObjectId in error to avoid Pydantic exception * when parsing set 'calc_ref_idx' as -1 in case of present 'exchange_rate' for a transaction which is not an exchange * TODO after saving many transactions from csv file update values of `calc_ref_idx` to actually be real ids of transactions and not just indexes taken from spreadsheet

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -131,7 +131,8 @@
     "mBank": "mBank",
     "cardByCliq": "Card by Cliq",
     "alior": "Alior",
-    "cash": "Cash"
+    "cash": "Cash",
+    "creditAgricole": "Credit Agricole"
   },
 
   "category_options": {
