--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -131,7 +131,8 @@
     "mBank": "mBank",
     "cardByCliq": "CardByCliq",
     "alior": "Alior",
-    "cash": "Gotówka"
+    "cash": "Gotówka",
+    "creditAgricole": "Credit Agricole"
   },
 
   "category_options": {
