renaming and deleting props of transactions * remove `idx` and `calc_ref_idx` * rename `real_idx` to `source_index` * rename `real_idx_ref` to `source_ref_idx` * rename `exchangeRefId` to `refId` * property names in snake_case are used in FastAPI server and in camelCase are used in Fastify server and frontend

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -86,8 +86,8 @@
   "accountPlaceholder": "Select account",
   "categoryPlaceholder": "Select category",
 
-  "created_at": "Created",
-  "updated_at": "Edited",
+  "createdAt": "Created",
+  "updatedAt": "Edited",
 
   "filterPanel": "Filters",
   "startDate": "Date from",
