split `StatisticsHeader` into smaller components * TODO think about adding some context for those smaller components to pass less properties

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -115,6 +115,9 @@
   "categoriesExcluded_one": "category excluded",
   "categoriesExcluded_other": "categories excluded",
 
+  "noCategoriesExcluded": "No categories excluded",
+  "includeAll": "Include all",
+
   "paymentMethod_options": {
     "atm": "ATM",
     "bankTransfer": "Bank Transfer",
